# toy-blog

./: .gitignore  Cargo.toml  LICENSE  README.md  check-version-sanity.sh
.github/workflows/: rust.yml
src/: backend.rs  extension.rs  main.rs  service.rs  telnet.rs
src/backend/: cors.rs  persistence.rs  repository.rs
src/backend/api/: article.rs  user.rs
src/backend/persistence/: model.rs
src/http/: persistence.rs  repository.rs
src/http/api/: article.rs
src/service/: http.rs  persistence.rs  telnet.rs
src/service/http/: api.rs  auth.rs  persistence.rs  repository.rs
src/service/http/api/: article.rs  meta.rs
src/service/telnet/: process_command.rs  repository.rs  state.rs  stream.rs
src/telnet/: ansi.rs  process_command.rs  repository.rs  response.rs  state.rs  stream.rs
