[package]
name = "toy-blog"
version = "0.4.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
actix-web-httpauth = "0.8.0"
addr = { version = "0.15.6", features = ["serde"] }
anyhow = "1.0.66"
chrono = { version = "0.4.23", default-features = false, features = ["std", "clock", "libc", "time", "serde"] }
clap = { version = "4.0.26", features = ["derive"] }
fern = { version = "0.6.1", features = ["colored"] }
log = "0.4.17"
once_cell = "1.16.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
strum = { version = "0.24.1", features = ["derive"] }
telnet-codec = "0.1.0"
tokio = "1.22.0"
# for telnet-codec
tokio-util = "0.6.10"
