[package]
name = "toy-blog"
version = "0.4.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
addr = { version = "0.15.6", features = ["serde"] }
anyhow = "1.0.69"
chrono = { version = "0.4.24", default-features = false, features = ["std", "clock", "libc", "time", "serde"] }
clap = { version = "4.1.9", features = ["derive"] }
fern = { version = "0.6.1", features = ["colored"] }
log = "0.4.17"
once_cell = "1.17.1"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
strum = { version = "0.24.1", features = ["derive"] }
telnet-codec = "0.1.0"
tokio = "1.27.0"
# for telnet-codec
tokio-util = "0.6.10"
